# wasm-vtt-poc

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  flake.nix  ouroboros.sample.toml  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
docs/api/: Justfile  Readme.md  api.env.sample
docs/api/request/auth/: login.json
server/: Cargo.toml
server/src/: app.rs  config.rs  error.rs  main.rs  setup.rs
server/src/cmd/: mod.rs  server.rs  setup.rs
server/src/engine/: mod.rs
server/src/engine/plugins/: network.rs
server/src/entities/: auth.rs  jwt.rs  mod.rs  ping.rs  setting.rs  user.rs
server/src/http/: mod.rs  prelude.rs
server/src/http/handler/: auth.rs  index.rs  mod.rs  ping.rs  user.rs
server/src/http/middlewares/: auth.rs
server/src/renet/: mod.rs
server/src/repository/: mod.rs  setting.rs  user.rs
server/src/repository/sqlite/: mod.rs  setting.rs  user.rs
server/src/usecases/: auth.rs  mod.rs  setting.rs  user.rs
src/: app.d.ts  app.html  lib.rs
src/lib/: vtt.ts
src/routes/: +error.svelte  +layout.ts  +page.svelte
src/routes/game/: +page.svelte
src/routes/login/: +page.svelte
src/routes/table/: +page.svelte
