[package]
name = "server"
version = "0.0.0"
edition = "2021"
about = "a (mostly) hackable and (hopefully) game agnostic virtual table top"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.1", features = ["toml"] }
actix-files = "0.6.2"
bevy = { workspace = true }
actix-web = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.30.0", features = ["bundled", "uuid"] }
clap = { version = "4.4.16", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
bcrypt = "0.15.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"
tokio-util = { workspace = true }
bevy_renet = { workspace = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
